# vulkan_window_linux_port

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  format_codebase.sh  gnu_setup.sh  lint_codebase.sh  run.sh  setup.sh
.github/workflows/: clang-format-check.yml
src/: main.cpp  triangle_application.cpp  triangle_application.hpp
src/shaders/: compile.bat  compile.sh
